terraform/v6-EC2_and_VPC_with_variables_and_outputs/ec2.tf
resource "aws_instance" "ec2" {
    ami = var.ami
    instance_type = var.instance_type
    key_name = var.key-name
    associate_public_ip_address = var.associate_ip
   // security_groups = ["rtp03-sg"]
   vpc_security_group_ids = ["${aws_security_group.rtp03-sg.id}"]
   subnet_id = "${aws_subnet.rtp03-public_subent_01.id}"
   for_each = toset(["master", "slave","ansible"])
   tags = {
     Name = "${each.key}"
   }
}
